# exloli-next

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
.sqlx/: query-00ca6465677a7863e4829f7b0d73bc2c13865f406c43ace96c58e17b2c903957.json  query-08b9e80fa404b0385924be942db541f4ca92ce0d44c0a1ce39ca7788eb6ea8c3.json  query-2137ff26a6153614425553dfc032a5af3bfca2e9a29493be062b0f67ef316e30.json  query-256f9751e0c62af07af41f6bbde6ff1739d3ab253136ee6b6b36595e7ffe384f.json  query-2816e7fd4de285ff3c216dc4f99d342a9cd53cafc0847c099a207a61cc7183d2.json  query-29b1910f876d1760c6fb969666b6f9a99bf65551a29fc58dd0c568ad02aa99ab.json  query-34152ee0fd7c8c5837215684910a9e3e2c4acc305f3138109da87d7c6051d684.json  query-3f460d31257b2b086581c0b70d0d8bb8e3e6dbdb783520e690f81717ba74a57d.json  query-4502cc51e97eac2a9b646fd29995e395671c28e562c11402dd20ffe67e4e1926.json  query-559998ce4048a09e93cf5a5dabed7b242dcaed9ee36b7cfc5511dfd9ede78c5b.json  query-5b7d67bb82e07d739197d50e1340adc0fb9241f7b029b99098d5e842e9138b7f.json  query-61558b08e67fc7d8ec8163be2794db74b63ca73c0a6e38e4f3dbe33773cae8f1.json  query-66b23dd06e2cb66f1eebef517c3704691a37dde7c53c85fdcd199899dbd6c2d2.json  query-7350fa4cccb7707bdf157fd37366f1d1b2e9419685c8fbd8b02d378b50120042.json  query-74b091587d9f3d0d0c1a2d4c81b81a16b1aff5078423419681b4b1e1baabcee6.json  query-75f2d54a319113b33a79848fc24c3bf279ba62122b20ea734610b4429904cd26.json  query-8b448cd24de12943c8d7eca3bef58a91eb1bc22c9a6575b920d8e6212f188e5b.json  query-8f4800239d46ef1955ac03742edb735624e1e72383807da16faba813850ff775.json  query-8f8642f0c003ca75f0ec7efc9d41a2b2e69ce42ee5947ede8de5cae1c5d32a55.json  query-b5148eab0b4a38108fa59162b96a4d834710faa32b9ac7a779249c40761415bb.json  query-b7097a3f47a2d2b7e40b8b5b3d0f1a53b0a2852ce7b1f02263a9250eeef14e6b.json  query-c49325a90df3340ec741d049666c42a9ff6071156e0ad85487453becd00328b6.json  query-cb111a577fbe526c8a759f302e961e4c2ab9722bfba2774180682997def15077.json  query-ce12bede401e6e5c63dd6163bd43d1429e73e88718a0f447881baf03d2021290.json  query-d9e96db052468b5adf87af076441fbd33b447f661ffa41fdf796a3b1ce753ded.json  query-efd76c5e82cc0ff76020e3bd706542f95a2f8494b573f179972677fafc0a5abd.json  query-f7bb425b09838eec64811e8bd6eb0418de48ff1b718e75900bc5580adc89a482.json  query-f98a9e3def36364d21f14a27f15a8045db0aefff42c004aa00e05dba8a2cf972.json  query-fb3b0d69427e7163aca7155f164fd12a0ba9f83e91903baa17ecd92e21cbc67b.json
migrations/: 20230617010057_init.up.sql  20230617010431_migrate.sql  20230617010431_migrate.up.sql  20230621090958_mark_as_deleted.up.sql  20230621090958_scan_old.sql  20230622032038_challenge.up.sql  20230622095127_fix_challenge_view.sql  20230623040729_challenge_history_add_group.up.sql  20230623112213_gallery_add_posted.up.sql  20230624133452_poll_remove_primary_key.up.sql  20230624150148_fix_challenge_view.sql  20230722143359_add_table_telegraph.sql  20230723090157_fix_message_primary_key.sql  20230725092403_add_table_invite_link.sql  20230725104500_fix_message_gallery_id.sql  20230801054321_fix_old_poll.sql  20240321115520_add_image_id_challenge_view.sql
src/: config.rs  lib.rs  s3.rs  tags.rs  uploader.rs
src/bot/: command.rs  dispatcher.rs  filter.rs  mod.rs  scheduler.rs  utils.rs
src/bot/handlers/: callback_query.rs  command_admin.rs  command_public.rs  custom_poll.rs  inline_query.rs  join_request.rs  mod.rs  poll.rs  utils.rs
src/database/: challenge.rs  db.rs  gallery.rs  image.rs  invite_link.rs  message.rs  mod.rs  poll.rs  telegraph.rs
src/ehentai/: client.rs  error.rs  mod.rs  types.rs
src/manager/: manager.rs  mod.rs  uploader.rs
src/utils/: html.rs  imagebytes.rs  mod.rs  tags.rs  xpath.rs
