[package]
name = "exloli-next"
version = "0.1.0-alpha1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
dashmap = "5.4.0"
duration-str = { version = "0.5.1", default-features = false, features = ["serde"] }
futures = "0.3.28"
indexmap = { version = "1.9.3", features = ["serde"] }
once_cell = "1.18.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["cookies", "gzip", "brotli"] }
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
telegraph-rs = { version = "0.6.2", git = "https://github.com/Aloxaf/telegraph-rs" }
teloxide = { version = "0.12.2", features = ["throttle", "cache-me", "macros"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["time", "rt-multi-thread", "macros"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-width = "0.1.10"
