[package]
name = "exloli-next"
version = "0.4.1"
edition = "2021"
default-run = "exloli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-creds = { version = "0.37.0", default-features = false }
aws-region = "0.25.5"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
dashmap = "6.0.1"
duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
futures = "0.3.30"
glob = "0.3.1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png", "rayon", "gif"] }
indexmap = { version = "2.3.0", features = ["serde"] }
once_cell = "1.19.0"
quircs = "0.10.2"
rand = "0.8.5"
regex = "1.10.6"
# 注意 e 站总是提供 brotli
reqwest = { version = "0.12.5", features = ["cookies", "gzip", "brotli", "socks", "json", "multipart"] }
bytes = "1.0"
rust-s3 = "0.35.1"
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
telegraph-rs = { version = "0.6.3", default-features = false, features = ["html"] }
teloxide = { version = "0.12.2", features = ["throttle", "cache-me", "macros"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["time", "rt-multi-thread", "macros", "full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-width = "0.1.13"

[profile.dev.package.sqlx-macros]
opt-level = 3
